feat: add incident reporting API flow
